// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Tabs correctly Render empty data 1`] = `
<nav
  className="movie-nav movie-card__nav"
>
  <ul
    className="movie-nav__list"
  >
    <li
      className="movie-nav__item movie-nav__item--active"
      onClick={[Function]}
    >
      <a
        className="movie-nav__link"
        href="#"
      >
        
      </a>
    </li>
    <li
      className="movie-nav__item movie-nav__item--active"
      onClick={[Function]}
    >
      <a
        className="movie-nav__link"
        href="#"
      >
        
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Render Tabs correctly Render mock data the right way 1`] = `
<nav
  className="movie-nav movie-card__nav"
>
  <ul
    className="movie-nav__list"
  >
    <li
      className="movie-nav__item movie-nav__item--active"
      onClick={[Function]}
    >
      <a
        className="movie-nav__link"
        href="#"
      >
        Due
      </a>
    </li>
    <li
      className="movie-nav__item"
      onClick={[Function]}
    >
      <a
        className="movie-nav__link"
        href="#"
      >
        Vue
      </a>
    </li>
  </ul>
</nav>
`;
